--- a/app/views/scomments/_scomment_form.html.erb
+++ b/app/views/scomments/_scomment_form.html.erb
@@ -10,7 +10,7 @@
       <div class="ui form">
           <div class="field">
             <label>Content</label>
-            <%= f.text_area :content, placeholder: "I suppose styling ..." %>
+            <%= f.text_area :content, placeholder: "I suppose styling ...",rows:"2" %>
           </div>
       </div>
 
@@ -20,7 +20,7 @@
       </span>
 
       <%= f.submit "SEND", class: "ui positive basic button" %>
-      
+
   <% end %>
 
 
