Design Changed(favoritesのハートとratingの星を大きく見やすくした。)

--- a/app/views/ratings/_show.html.erb
+++ b/app/views/ratings/_show.html.erb
@@ -1,5 +1,5 @@
 <%= link_to rating_path(current_user.ratings.find_by(scomment_id: scomment.id)), remote: true, method: :get, class: 'rating-link' do %>
-  <i class="star icon"></i>
+  <i class="big star icon"></i>
 <% end %>
 
 
