--- a/app/views/ratings/_create.html.erb
+++ b/app/views/ratings/_create.html.erb
@@ -1,6 +1,6 @@
 <%= link_to ratings_path(rating: {scomment_user: scomment.user.id, star: '1', scomment_id: scomment.id }), remote: true, method: :post, class: 'rating-link' do %>
 
-<i class="empty star icon"></i>
+<i class="big empty star icon"></i>
 
 <% end %>
 
