Design Changed(postの詳細(show)ページと、そこに付随するscomments一覧ページ)

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,25 +1,34 @@
 ＜＜posts/showページはじまり。
 
 <!-- 選択したPost内容 -->
-<div class="ui segments">
-  <div class="ui segment">
-    <p>
-      <%= @post.content %>
-    </p>
-    <%= image_tag @post.picture.url if @post.picture? %>
-  </div>
+<h3>This post is created by <%= link_to @post.user.name, @post.user %> </h3>
+    <div class="ui card">
+      <%= image_tag @post.picture.url if @post.picture? %>
+    </div>
+<div class="ui segment">
+  <%= @post.content %>
 </div>
+    <div class="date">
+      <%= time_ago_in_words(@post.created_at) %> ago
+    </div>
+
+<div class="ui divider"></div>
 
 <!-- コメント数 & 一覧 （ポストした人のみ見れる）-->
 <% if current_user?(@post.user) %>
   <span>
     <i class="idea icon"></i>
-    <%= @post.scomments.count %>stylings now
+    <%= @post.scomments.count %>stylings getting now
   </span>
+<div class="ui divider"></div>
 
+<!-- もらったコメント一覧 -->
   <%= render @post.scomments %>
 
 <% end %>
+
+
+
 
 <!-- このポストへコメントを送るフォーム（スタイリストならみんな見れる） -->
 <% if logged_in? && current_user.stylist? %>
