星のAjaxがうまく動いていないので解決探り中。

--- a/app/views/ratings/_show.html.erb
+++ b/app/views/ratings/_show.html.erb
@@ -1,4 +1,4 @@
-<%= link_to rating_path(current_user.ratings.find_by(scomment_id: scomment.id)), remote: true, method: :get, class: 'rating-link' do %>
+<%= link_to rating_path(current_user.ratings.find_by(scomment_id: scomment.id)), remote: true, method: :get, class: 'rating-link', data: { confirm: "You sure?" } do %>
   <i class="big star icon"></i>
 <% end %>
 
