--- a/app/views/ratings/_create.html.erb
+++ b/app/views/ratings/_create.html.erb
@@ -1,7 +1,3 @@
-<%= link_to ratings_path(rating: {scomment_user: scomment.user.id, star: '1', scomment_id: scomment.id }), remote: true, method: :post, class: 'rating-link' do %>
-
+<%= link_to ratings_path(rating: {scomment_user: scomment.user.id, star: '1', scomment_id: scomment.id }), remote: true, method: :post, class: 'rating-link', data: { confirm: "Send one star?" } do %>
 <i class="big empty star icon"></i>
-
 <% end %>
-
-<a class="ui left pointing olive basic label">Press Star for Thanks!</a>
