--- a/app/views/ratings/show.js.erb
+++ b/app/views/ratings/show.js.erb
@@ -1,2 +1,2 @@
-$('#scomment_<%= @scomment.id %>').html('<%= escape_javascript(render("ratings/rating_btn", scomment: @scomment)) %>');
-$('#ratings').text('<%= current_user.ratings.count %>');
+$("#scomment_<%= @scomment.id %>").html("<%= escape_javascript(render('ratings/rating_btn', scomment: @scomment)) %>");
+$("#ratings").text('<%= current_user.ratings.count %>');
