--- a/app/views/ratings/_show.html.erb
+++ b/app/views/ratings/_show.html.erb
@@ -1,7 +1,4 @@
-<%= link_to rating_path(current_user.ratings.find_by(scomment_id: scomment.id)), remote: true, method: :get, class: 'rating-link', data: { confirm: "You sure?" } do %>
+<%= link_to rating_path(current_user.ratings.find_by(scomment_id: scomment.id)), remote: true, method: :get, class: 'rating-link' do %>
   <i class="big star icon"></i>
 <% end %>
-
-
-
-<!-- 本当は、<div class="ui rating" data-max-rating="1"></div>の、そして、、read-onlyの星に変える。 -->
+Star already sent.
