--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -57,15 +57,12 @@
 </a>
 </div>
 
-<div class="ui button">
-  <strong class="stat">
-    <%= @user.rating_scomments.count %><br>
-    Stars<br>
-    <i class="star icon"></i>
-  </strong>
-</div>
+
 
 </div>
+
+
+<p>You are getting <%= @user.rating_scomments.count %> Stars<i class="star icon"></i></p>
 
 
 <div class="ui green basic button">
