--- a/app/views/posts/_post_form.html.erb
+++ b/app/views/posts/_post_form.html.erb
@@ -1,4 +1,3 @@
-Post_formページスタート＞＞
 
 <h1>Send New Post!</h1>
 
@@ -19,23 +18,32 @@ Post_formページスタート＞＞
   </span>
 
   <div class="ui divider"></div>
-  <!-- ポストの詳細選ぶ（アコーディオン）必ずulは入れること（custom.cssにて操作）-->
-      <div class="acodmenu">
-          <label for="Panel13">
+
+
+  <!-- ポストの詳細選ぶ（アコーディオン）必ずulは入れること（custom.cssにて操作中）-->
+  <div class="acodmenu">
+
+    <!-- 閉まっているときの表示 -->
+    <label for="Panel13">
             <div class="active title">
               <i class="dropdown icon"></i>
               Optional Details
             </div>
-          </label>
-          <input type="checkbox" id="Panel13" class="on-off" />
-          <ul>
+    </label>
 
+    <input type="checkbox" id="Panel13" class="on-off" />
 
+    <!-- 開いたときの内容 -->
+    <ul>
+        <!-- 各種ボタン -->
         <div class="content field">
-          <!-- サイズ選ぶ -->
 
+          <!-- ラジオボタン（複数選択不可） -->
           <div class="ui form item">
+
             <div class="grouped inline fields">
+
+
               <div class="field">
                 <div class="ui radio checkbox">
                   <input type="radio" name="size" value="small">
@@ -65,20 +73,18 @@ Post_formページスタート＞＞
                 <label>I enjoy having fun</label>
               </div>
 
-              <div class="ui toggle checkbox">
-                <input type="checkbox" name="pet">
-                <label>Allow other people to pet my dog</label>
-              </div>
 
 
             </div>
+
           </div>
 
-          <!-- サイズ選ぶ終わり -->
 
-          <!-- 色選ぶ -->
+
+          <!-- チェックボタン（　複数選択可 ） -->
             <div class="ui form item">
               <div class="grouped inline fields">
+
                 <div class="field">
                   <div class="ui checkbox">
                     <input type="checkbox" name="small">
@@ -103,12 +109,26 @@ Post_formページスタート＞＞
                     <label>Blue</label>
                   </div>
                 </div>
+
               </div>
             </div>
+
+
           </div>
-      <!-- 色選ぶ終わり -->
-          </ul>
-      </div>
+
+        <!-- トグルボタン -->
+        <div class="ui toggle checkbox">
+          <input type="checkbox" name="pet">
+          <label>Set to Private</label>
+        </div>
+
+
+    </ul>
+    <!-- 開いたときの内容おわり   -->
+
+  </div>
+
+
 <div class="ui divider"></div>
 
 
