--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,24 +13,38 @@
   <%= form_tag(users_path, method: "get") do %>
 
     <div class="ui input">
-
       <%= label_tag :name, "NAME" %>
       <%= text_field_tag :name, params[:name] %>
     </div>
 
+    <div class="ui form">
+      <div class="field">
+        <%= label_tag :name, "GENDER" %>
+        <%= select_tag :gender, options_for_select(User.genders), include_blank: true %>
+      </div>
+    </div>
 
-    <%= label_tag :name, "GENDER" %>
-    <%= select_tag :gender, options_for_select(User.genders), include_blank: true %>
+    <div class="ui form">
+      <div class="field">
+        <%= label_tag :country, "COUNTRY" %>
+        <%= select_tag :country, options_for_select(User.countries), include_blank: true %>
+      </div>
+    </div>
+
+    <div class="ui form">
+      <div class="field">
+        <%= label_tag :stylist, "STYLIST" %>
+        <%= select_tag :stylist, grouped_options_for_select(User::SELECT_OPTIONS), include_blank: true %>
+      </div>
+    </div>
 
 
-    <%= label_tag :country, "COUNTRY" %>
-    <%= select_tag :country, options_for_select(User.countries), include_blank: true %>
+    <div class="segment">
+      <%= submit_tag "Search!", class: "ui basic blue button" %>
+    </div>
 
-    <%= label_tag :stylist, "STYLIST" %>
-    <%= select_tag :stylist, grouped_options_for_select(User::SELECT_OPTIONS), include_blank: true %>
+      <!-- ここにクリアボタンもつくる。 -->
 
-    <%= submit_tag "Search!", class: "ui button" %>
-    ここにクリアボタンもつくる。
   <% end %>
 </div>
 
@@ -40,6 +54,7 @@
 <h1>All users</h1>
 <ul class="users">
   <%= render @users %>
+
 </ul>
 
 <!-- ページネーション -->
