--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,3 @@
-＜＜posts/showページはじまり。
-
 <!-- 選択したPost内容 -->
 <h3>This post is created by <%= link_to @post.user.name, @post.user %> </h3>
     <div class="ui card">
@@ -7,12 +5,71 @@
     </div>
 <div class="ui segment">
   <%= @post.content %>
-</div>
+
+  <div class="ui divider"></div>
+
+
+  <table class="ui very compact table">
+  <thead>
+    <tr><th>other choices</th>
+    <th></th>
+  </tr></thead>
+  <tbody>
+    <tr>
+      <td>item</td>
+      <td><%= @post.item %></td>
+
+    </tr>
+    <tr>
+      <td>For</td>
+      <td><%= @post.for_who %></td>
+
+    </tr>
+    <tr>
+      <td>Size</td>
+      <td><%= @post.size %></td>
+
+    </tr>
+    <tr>
+      <td>Color</td>
+      <td><%= @post.color %></td>
+
+    </tr>
+    <tr>
+      <td>style_genre</td>
+      <td><%= @post.style_genre %></td>
+
+    </tr>
+    <tr>
+      <td>scene</td>
+      <td><%= @post.scene %></td>
+
+    </tr>
+    <tr>
+      <td>season</td>
+      <td><%= @post.season %></td>
+
+    </tr>
+    <tr>
+      <td>price_range</td>
+      <td><%= @post.price_range %></td>
+    </tr>
+    <tr>
+      <td>deadline</td>
+      <td><%= @post.deadline %></td>
+    </tr>
+  </tbody>
+</table>
+
+
+
+
+
     <div class="date">
       <%= time_ago_in_words(@post.created_at) %> ago
     </div>
+</div>
 
-<div class="ui divider"></div>
 
 <!-- コメント数 & 一覧 （ポストした人のみ見れる）-->
 <% if current_user?(@post.user) %>
