--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -44,7 +44,7 @@
     <div class="content">
       <span class="left floated">
         <i class="idea icon"></i>
-        <%= link_to "See My got Stylings", got_path %>
+        <%= link_to "Got Stylings", got_path %>
       </span>
       <span class="right floated">
         <%= link_to "Edit profile", edit_user_path(current_user) %>
