--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,11 @@
+/*******************************
+
+*******************************/
+
+
+/*******************************
+            body
+*******************************/
 
 body {
     margin-top: 60px;
