ユーザー情報カードで、まだ写真をセットしていなかったら、デフォルトで「STYLATTE」が表示されるようにした。

--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -12,8 +12,10 @@
         <% end %>
 
         <!-- プロフィール写真 -->
-          <% if @user.picture %>
+          <% if @user.picture.present? %>
             <%= image_tag @user.picture.url %>
+          <% else %>
+          <%= image_tag("stylatte_50.png", alt: "STYLATTE") %>
           <% end %>
     </div>
 
